# autoupnp

./: INSTALL  Makefile  Makefile.am  NEWS  README  README.rst  autoupnp  autoupnp.c  autoupnp.sh  configure.ac  meson.build  meson_options.txt  notify.c  notify.h  registry.c  registry.h  upnp.c  upnp.h
m4/: acx_pthread.m4
src/: autoupnp.c  notify.c  notify.h  registry.c  registry.h  upnp.c
tests/: Makefile  clean_close.c  fork_close.c  threads.c
